Done init master backend

--- a/netlify.toml
+++ b/netlify.toml
@@ -1,8 +1,12 @@
 [build]
- functions = "functions"
- base = "./"
+ publish = "dist"
+ node_bundler = "esbuild"
 
- [[redirects]]
-  to="/.netlify/functions/api/:splat"
+[functions]
+  directory = "functions/"
+
+[[redirects]]
+  # force = true
   from="/*"
   status=200
+  to="/.netlify/functions/:splat"
