--- a/package.json
+++ b/package.json
@@ -1,18 +1,21 @@
 {
-  "name": "master-backend",
-  "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "dependencies": {
-    "express": "^4.19.2",
-    "netlify-cli": "^17.23.8",
-    "netlify-lambda": "^2.0.16",
-    "serverless-http": "^3.2.0"
-  }
+	"name": "master-backend",
+	"version": "1.0.0",
+	"description": "",
+	"main": "index.js",
+	"scripts": {
+		"test": "echo \"Error: no test specified\" && exit 1",
+		"dev": "netlify dev",
+		"build": "netlify deploy --prod"
+	},
+	"keywords": [],
+	"author": "",
+	"license": "ISC",
+	"dependencies": {
+		"@supabase/supabase-js": "^2.43.4",
+		"express": "^4.19.2",
+		"netlify-cli": "^17.23.8",
+		"netlify-lambda": "^2.0.16",
+		"serverless-http": "^3.2.0"
+	}
 }
