--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
 	"license": "ISC",
 	"dependencies": {
 		"@supabase/supabase-js": "^2.43.4",
+		"cors": "^2.8.5",
 		"express": "^4.19.2",
 		"netlify-cli": "^17.23.8",
 		"netlify-lambda": "^2.0.16",
